stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_inference_let_annotation_mismatch.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/inference_let_annotation_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × type annotation does not match value
   ╭─[tests/fixtures/diagnostics/types/inference_let_annotation_mismatch.ml:2:14]
 1 │ fn main() {
 2 │   let value: i64 = true;
   ·              ─┬─
   ·               ╰── expected `i64`, but this binding has type `bool`
 3 │   println("bad")
   ╰────
  help: change the annotation or the value
